correcte robot position on mobile

--- a/4. (6) joke-teller/less/style.less
+++ b/4. (6) joke-teller/less/style.less
@@ -56,6 +56,7 @@ body {
   body {
     #container {
       background-size: cover;
+      background-position: center center;
       flex-flow: column nowrap;
       justify-content: flex-end;
       padding-bottom: 10vh;
